Bug 1857371 Performance footer messages left align
Removed class center from template, so performance footer message
is left aligned. Also taken away floats for small screens for footer
nav and mahara version so they can all fit nicely.

behatnotneeded

--- a/htdocs/theme/raw/sass/layout/_footer.scss
+++ b/htdocs/theme/raw/sass/layout/_footer.scss
@@ -45,6 +45,7 @@
             @include media-breakpoint-down(sm) {
                 float: none !important;
                 text-align: center;
+                padding-top: 20px;
             }
         }
         .site-performace {
